# claude-atlas

./: .gitignore  .mcp.json  LICENSE  README.md  claude-desktop-instructions.txt  pyproject.toml
.claude-plugin/: marketplace.json  mcp.json  plugin.json
.claude/skills/: atlas-projects.md  atlas-status.md  atlas-update.md
.claude/skills/atlas-create/: SKILL.md
.claude/skills/atlas-my-updates/: SKILL.md
.claude/skills/atlas-projects/: SKILL.md
.claude/skills/atlas-status/: SKILL.md
.claude/skills/atlas-tag/: SKILL.md
.claude/skills/atlas-update/: SKILL.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-foundation/: 01-01-PLAN.md
.planning/milestones/v1.0-phases/02-atlas-tools/: 02-01-PLAN.md
.planning/milestones/v1.0-phases/03-skills/: 03-01-SUMMARY.md  03-VERIFICATION.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-atlas-tools/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-skills/: 03-01-PLAN.md
src/atlas/: config.py  graphql_client.py  queries.py  server.py
tests/: test_config.py  test_create_project.py  test_graphql_client.py  test_project_tools.py  test_update_tools.py
